--- a/computer_setup/tasks/mac.yml
+++ b/computer_setup/tasks/mac.yml
@@ -9,8 +9,10 @@
 
 
 - name: pip install needed packages
+  become: true
+  become_user: root
   pip: 
-    name: "{{ name }}"
+    name: "{{ item }}"
   with_items:
     - virtualenv
     - virtualenvwrapper
